# generic-network-protocol

./: .gitignore  Cargo.toml  NetworkProtocol.sln  README.md
Client/: Program.cs  example.p12
NetworkProtocol/: Makefile  NetworkProtocol.vcxproj  errors.c  example-com.cert.pem  example-com.key.pem  internal.h  network.c  network.h  platform.c  platform.h  protocol.c  tryout.c  tryout.cpp  utils.c  vasprintf.c
src/: main.rs
src/server/: cmd.rs  err.rs  mod.rs
