[package]
name = "rust-gnp"
version = "0.1.0"
authors = ["Ayende Rahien <Ayende@ayende.com>"]

[dependencies]
memmem = "0.1.1"
custom_error = "1.3.0"
lazy_static = "1.2.0"
openssl = "0.10.16"
hex = "0.3.2"
openssl-sys = "0.9.40"
foreign-types-shared = "0.1.1"
tokio = "0.1.13"
tokio-openssl = "0.3.0"
futures-await = "0.1.1"
tokio-io = "0.1.10"
bytes = "0.4"
